--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": "true",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack --mode production --config ./webpack.prod.config.js"
   },
   "keywords": [],
   "author": "",
