--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "private": "true",
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack --mode production --config ./webpack.prod.config.js"
+    "start-dev": "webpack serve --open",
+    "start": "node prod/server.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -27,5 +28,8 @@
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.8.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
